--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Ymor Calayag</a>
+      </div>
+    </nav>
+
+    <div class="top-container"></div>
+
+    <div class="mid-container"></div>
+
+    <div class="btm-container"></div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
