--- a/index.html
+++ b/index.html
@@ -10,19 +10,38 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg custom-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Ymor Calayag</a>
       </div>
     </nav>
 
-    <div class="top-container"></div>
+    <div class="top-container">
+      <h1>Hello World!</h1>
+    </div>
 
-    <div class="mid-container"></div>
+    <div class="mid-container">
+      <h1>Mid Container</h1>
+    </div>
 
-    <div class="btm-container"></div>
+    <div class="btm-container">
+      <h1>Bottom Container</h1>
+    </div>
+
+    <footer>
+      <h2>Test Footer</h2>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
