--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg custom-nav">
+    <nav class="navbar navbar-expand-lg custom-nav fs-1">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ymor Calayag</a>
+        <a class="navbar-brand custom-nav-font" href="#">YMOR</a>
       </div>
     </nav>
 
