Update: top container text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </nav>
 
     <div class="top-container">
-      <h1>Hello World!</h1>
+      <p>Hello, my name is</p>
+      <h1>Jeffrey Ymor Calayag.</h1>
+      <h3>I'm currently studying programming.</h3>
     </div>
 
     <div class="mid-container">
