--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="top-container">
       <p>Hello, my name is</p>
       <h1>Jeffrey Ymor Calayag.</h1>
-      <h3>I'm currently studying programming.</h3>
+      <p>I'm currently studying programming.</h3>
     </div>
 
     <div class="mid-container">
