Add images in middle container

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     </div>
 
     <div class="mid-container">
-      <h1>Mid Container</h1>
+      <h1>Currently learning</h1>
+      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968292.png" alt="Javascript">
+      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968267.png" alt="HTML5">
+      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968242.png" alt="CSS3">
+      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968672.png" alt="Bootstrap">      
     </div>
 
     <div class="btm-container">
