Update mid container design

--- a/index.html
+++ b/index.html
@@ -30,15 +30,43 @@
     <div class="top-container">
       <p>Hello, my name is</p>
       <h1>Jeffrey Ymor Calayag.</h1>
-      <p>I'm currently studying programming.</h3>
+      <p>I'm currently studying programming.</p>
     </div>
 
     <div class="mid-container">
-      <h1>Currently learning</h1>
-      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968292.png" alt="Javascript">
-      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968267.png" alt="HTML5">
-      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968242.png" alt="CSS3">
-      <img src="https://cdn-icons-png.flaticon.com/64/5968/5968672.png" alt="Bootstrap">      
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <img
+              class="big-img"
+              src="https://cdn-icons-png.flaticon.com/256/4727/4727424.png"
+              alt="Studying"
+            />
+          </div>
+          <div class="col">
+            <h1>Currently learning</h1>
+            <img
+              class="custom-img"
+              src="https://cdn-icons-png.flaticon.com/64/5968/5968292.png"
+              alt="Javascript"
+            />
+            <img
+              class="custom-img"
+              src="https://cdn-icons-png.flaticon.com/64/5968/5968267.png"
+              alt="HTML5"
+            />
+            <img
+              class="custom-img"
+              src="https://cdn-icons-png.flaticon.com/64/5968/5968242.png"
+              alt="CSS3"
+            />
+            <img
+              src="https://cdn-icons-png.flaticon.com/64/5968/5968672.png"
+              alt="Bootstrap"
+            />
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="btm-container">
