--- a/index.html
+++ b/index.html
@@ -70,12 +70,37 @@
     </div>
 
     <div class="btm-container">
-      <h1>Bottom Container</h1>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <h1>Work Experience</h1>
+            <ol>
+              <li>
+                <p class="list-title">Data Labeling</p>
+                <p>bla bla bla bla</p>
+              </li>
+              <li>
+                <p class="list-title">Content Moderation</p>
+                <p>bla bla bla bla</p>
+              </li>
+              <li>
+                <p class="list-title">Email Support</p>
+                <p>bla bla bla bla</p>
+              </li>
+            </ol>
+          </div>
+          <div class="col">
+            <img
+              class="big-img"
+              src="https://cdn-icons-png.flaticon.com/256/2163/2163311.png"
+              alt="Working"
+            />
+          </div>
+        </div>
+      </div>
     </div>
 
-    <footer>
-      <h2>Test Footer</h2>
-    </footer>
+    <footer></footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
