--- a/index.html
+++ b/index.html
@@ -98,7 +98,34 @@
       </div>
     </div>
 
-    <footer></footer>
+    <footer>
+      <p class="footer-img">
+        <img
+          class="ft-icon"
+          src="https://cdn-icons-png.flaticon.com/24/733/733553.png"
+          alt="Github"
+        />
+        <img
+          class="ft-icon"
+          src="https://cdn-icons-png.flaticon.com/24/733/733547.png"
+          alt="Facebook"
+        />
+        <img
+          class="ft-icon"
+          src="https://cdn-icons-png.flaticon.com/24/3536/3536505.png"
+          alt="LinkedIn"
+        />
+        <img
+          class="ft-icon"
+          src="https://cdn-icons-png.flaticon.com/24/732/732200.png"
+          alt="Email"
+        />
+      </p>
+      <a href="https://www.flaticon.com/free-icons/working" title="Flat Icons"
+        >Icons created by Flat Icons - Flaticon</a
+      >
+      <p>© 2023</p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
