Update work experience

--- a/index.html
+++ b/index.html
@@ -76,21 +76,37 @@
             <ol>
               <li>
                 <p class="list-title">Data Labeling</p>
-                <p>bla bla bla bla</p>
+                <p>
+                  Responsible for labeling and annotating data according to
+                  specific guidelines or criteria. This involves reviewing and
+                  interpreting data, applying labels or tags to data points, and
+                  ensuring accuracy and consistency in labeling.
+                </p>
               </li>
               <li>
                 <p class="list-title">Content Moderation</p>
-                <p>bla bla bla bla</p>
+                <p>
+                  Responsible for reviewing a vast amount of user-generated
+                  content, including images and videos. Uses a combination of
+                  manual and automated tools to detect and remove inappropriate
+                  content such as hate speech, spam, misinformation, and
+                  copyrighted material.
+                </p>
               </li>
               <li>
                 <p class="list-title">Email Support</p>
-                <p>bla bla bla bla</p>
+                <p>
+                  Promptly and professionally address customer inquiries,
+                  concerns, and questions. This involves providing details about
+                  products or services, resolving complaints or issues, and
+                  acknowledging customer feedback.
+                </p>
               </li>
             </ol>
           </div>
           <div class="col">
             <img
-              src="https://cdn-icons-png.flaticon.com/256/2163/2163311.png"
+              src="https://cdn-icons-png.flaticon.com/512/2163/2163311.png"
               alt="Working"
             />
           </div>
