--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col">
             <h1>Work Experience</h1>
-            <ol>
+            <ol class="custom-ol">
               <li>
                 <p class="list-title">Data Labeling</p>
                 <p>
